--- a/index.html
+++ b/index.html
@@ -1,1 +1,2 @@
-<meta http-equiv="Refresh" content="2; url=public/index.html">
+<meta http-equiv="Refresh" content="2; url=public/index.html" />
+<meta name="viewport" content="initial-scale=1.0" />
